--- a/background/display3.html
+++ b/background/display3.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-    />
+    <style>
+      .hidden {
+        display: none;
+      }
+    </style>
   </head>
   <body>
-    <h1>테스트</h1>
-    <ul>
-      <li>리스트</li>
-    </ul>
+    <div class="hidden">Hidden Area</div>
   </body>
 </html>
