--- a/box/box4.html
+++ b/box/box4.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-    />
+    <style>
+      .box {
+        width: 100px;
+        height: 100px;
+        background-color: tomato;
+        padding: 20px;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
-    <h1>테스트</h1>
-    <ul>
-      <li>리스트</li>
-    </ul>
+    <div class="box"></div>
   </body>
 </html>
