--- a/position/position7.html
+++ b/position/position7.html
@@ -19,7 +19,7 @@
       }
       .a {
         background-color: red;
-        right: 500px;
+        right: 500px; /* 100%(컨테이너의 크기가 다양한 경우) */
         top: 33%;
       }
       .b {
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="box a">boxaaa</div>
+      <div class="box a">box aaaaa</div>
       <div class="box b">box bb</div>
       <div class="box c">box c</div>
     </div>
